[tool.poetry]
name = "chrome-history-restore"
version = "0.1.0"
description = ""
authors = ["Vlad Korolev <vlad@v-lad.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
jupyterlab = "^4.1.2"
jupyter = "^1.0.0"
adict = "^0.1.7"
tqdm = "^4.66.2"
pip = "^24.0"
install = "^1.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
